adding school names

--- a/Project_3/Cleaning/champions.ipynb
+++ b/Project_3/Cleaning/champions.ipynb
@@ -54,29 +54,505 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "football_champions_df = tables[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "football_champions_df.set_index('Season', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Champion</th>\n",
+       "      <th>Selecting Organization</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>LSU</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>Clemson</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Clemson</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Ohio State</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>Florida State</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Auburn</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>LSU</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>Texas</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Southern California*</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>LSU, Southern California</td>\n",
+       "      <td>BCS, AP, FWAA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>Ohio State</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>Miami (Fla.)</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>Oklahoma</td>\n",
+       "      <td>BCS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Season                  Champion Selecting Organization\n",
+       "0     2019                       LSU                    CFP\n",
+       "1     2018                   Clemson                    CFP\n",
+       "2     2017                   Alabama                    CFP\n",
+       "3     2016                   Clemson                    CFP\n",
+       "4     2015                   Alabama                    CFP\n",
+       "5     2014                Ohio State                    CFP\n",
+       "6     2013             Florida State                    BCS\n",
+       "7     2012                   Alabama                    BCS\n",
+       "8     2011                   Alabama                    BCS\n",
+       "9     2010                    Auburn                    BCS\n",
+       "10    2009                   Alabama                    BCS\n",
+       "11    2008                   Florida                    BCS\n",
+       "12    2007                       LSU                    BCS\n",
+       "13    2006                   Florida                    BCS\n",
+       "14    2005                     Texas                    BCS\n",
+       "15    2004      Southern California*                    BCS\n",
+       "16    2003  LSU, Southern California          BCS, AP, FWAA\n",
+       "17    2002                Ohio State                    BCS\n",
+       "18    2001              Miami (Fla.)                    BCS\n",
+       "19    2000                  Oklahoma                    BCS"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "football_champions_df = tables[0]\n",
+    "\n",
+    "football_champoions = football_champions_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  football_champions_df['Champion'].replace(['Alabama', 'Clemson','LSU','Florida State','Auburn','Florida','Texas'], \n",
+    "#                                           ['The University of Alabama','Clemson University','Louisiana State University and Agricultural & Mechanical College',\n",
+    "#                                           'Florida State University','Auburn University','University of Florida',\n",
+    "#                                           'The University of Texas at Austin'])\n",
+    "\n",
+    "# football_champions_df.replace(to_replace = [\"Alabama\"], value = \"The University of Alabama\")\n",
+    "# football_champions_df.replace(to_replace = [\"Clemson\"], value = 'Clemson University')\n",
+    "# football_champions_df.replace(to_replace = [\"Clemson\"], value = \"\"\n",
+    "\n",
+    "champs_df = football_champions_df.replace(to_replace={\"Alabama\":\"The University of Alabama\",\"Clemson\":'Clemson University',\n",
+    "                                         'LSU':'Louisiana State University and Agricultural & Mechanical College',\n",
+    "                                         'Florida State':'Florida State University','Auburn':'Auburn University','Florida':'University of Florida',\n",
+    "                                         'Texas':'The University of Texas at Austin'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Champion</th>\n",
+       "      <th>Selecting Organization</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Season</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>Louisiana State University and Agricultural &amp; ...</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>Clemson University</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>The University of Alabama</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>Clemson University</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>The University of Alabama</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1873</th>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1872</th>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1871</th>\n",
+       "      <td>None selected</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1870</th>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1869</th>\n",
+       "      <td>Princeton, Rutgers</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>151 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Champion  \\\n",
+       "Season                                                      \n",
+       "2019    Louisiana State University and Agricultural & ...   \n",
+       "2018                                   Clemson University   \n",
+       "2017                            The University of Alabama   \n",
+       "2016                                   Clemson University   \n",
+       "2015                            The University of Alabama   \n",
+       "...                                                   ...   \n",
+       "1873                                            Princeton   \n",
+       "1872                                            Princeton   \n",
+       "1871                                        None selected   \n",
+       "1870                                            Princeton   \n",
+       "1869                                   Princeton, Rutgers   \n",
+       "\n",
+       "       Selecting Organization  \n",
+       "Season                         \n",
+       "2019                      CFP  \n",
+       "2018                      CFP  \n",
+       "2017                      CFP  \n",
+       "2016                      CFP  \n",
+       "2015                      CFP  \n",
+       "...                       ...  \n",
+       "1873                      NCF  \n",
+       "1872                      NCF  \n",
+       "1871                      NCF  \n",
+       "1870                      NCF  \n",
+       "1869                      NCF  \n",
+       "\n",
+       "[151 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "champs_df "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of ['Season'] are in the columns\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-f114e3e10fbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchamps_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Season'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/envs/PythonData/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mset_index\u001b[0;34m(self, keys, drop, append, inplace, verify_integrity)\u001b[0m\n\u001b[1;32m   4301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4302\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmissing\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4303\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"None of {missing} are in the columns\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4304\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4305\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"None of ['Season'] are in the columns\""
+     ]
+    }
+   ],
+   "source": [
+    "champs_df.set_index('Season', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "football_champions_df.to_csv('../Cleaned_Resources/footbal_champions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Champion</th>\n",
+       "      <th>Selecting Organization</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Season</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>LSU</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>Clemson</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016</th>\n",
+       "      <td>Clemson</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>CFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1873</th>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1872</th>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1871</th>\n",
+       "      <td>None selected</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1870</th>\n",
+       "      <td>Princeton</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1869</th>\n",
+       "      <td>Princeton, Rutgers</td>\n",
+       "      <td>NCF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>151 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Champion Selecting Organization\n",
+       "Season                                           \n",
+       "2019                   LSU                    CFP\n",
+       "2018               Clemson                    CFP\n",
+       "2017               Alabama                    CFP\n",
+       "2016               Clemson                    CFP\n",
+       "2015               Alabama                    CFP\n",
+       "...                    ...                    ...\n",
+       "1873             Princeton                    NCF\n",
+       "1872             Princeton                    NCF\n",
+       "1871         None selected                    NCF\n",
+       "1870             Princeton                    NCF\n",
+       "1869    Princeton, Rutgers                    NCF\n",
+       "\n",
+       "[151 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "football_champions_df"
    ]
   },
   {
